<resources>
    // Application data.
    <string name="app_name">AndroidBridge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BIOSENTRY Bridge application</string>
    <string name="nav_header_subtitle">m.besselink@student.fontys.nl</string>

    // UI element names
    <string name="menu_home">Home / Connections</string>
    <string name="menu_camera">Camera Views</string>
    <string name="menu_aircraft">Drone Info</string>
    <string name="menu_sensors">Sensor Info</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="fragment_gallery_title">This is the sensor-readouts tab:</string>

    // Accelerometer labels
    <string name="TVAccelXLabel">"X: "</string>
    <string name="TVAccelYLabel">Y:</string>
    <string name="TVAccelZLabel">Z:</string>

    // Accelerometer data fields
    <string name="TVAccelZ">NaN</string>
    <string name="TVAccelX">NaN</string>
    <string name="TVAccelY">NaN</string>

    <string name="TV_accelerometer_name">null</string>
    <string name="TV_accelerometer_vendor">null</string>
    <string name="TV_accelerometer_minDelay">null</string>
    <string name="TV_accelerometer_resolution">null</string>
    <string name="TV_accelerometer_range">null</string>

    // Gyroscope Labels
    <string name="TVRollLabel">R:</string>
    <string name="TVPitchLabel">P:</string>
    <string name="TVYawLabel">Y:</string>

    // Gyroscope data fields
    <string name="TVRoll">NaN</string>
    <string name="TVPitch">NaN</string>
    <string name="TVYaw">NaN</string>

    <string name="TV_gyroscope_resolution">null</string>
    <string name="TV_gyroscope_name">null</string>
    <string name="TV_gyroscope_vendor">null</string>
    <string name="TV_gyroscope_range">null</string>
    <string name="TV_gyroscope_minDelay">null</string>

    // Generic Sensor Labels
    <string name="TV_accelerometer_label">Accelerometer:</string>
    <string name="TV_gyro_label">Gyroscope:</string>
    <string name="TV_sensor_range_label">Range:</string>
    <string name="TV_sensor_resolution_label">Resolution:</string>
    <string name="TV_sensor_delay_label">Delay:</string>
    <string name="TV_sensor_name_label">Name:</string>
    <string name="TV_sensor_vendor_label">Vendor:</string>

    <string name="TV_sending_data">false</string>
    <string name="TV_send_once">false</string>

    // GPS Labels
    <string name="TV_GPS_label">GPS:</string>
    <string name="TV_GPS_name">null</string>
    <string name="TV_GPS_vendor">null</string>
    <string name="TVLongitudeLabel">Lon:</string>
    <string name="TVLatitudeLabel">Lat:</string>
    <string name="TV_altitude_label">Alt:</string>
    <string name="TV_altitude">NaN</string>

    // GPS data fields
    <string name="TVLongitude">NaN</string>
    <string name="TVLatitude">NaN</string>
    <string name="TVLocation">NaN</string>

    // WebSocket Labels
    <string name="TV_websocket_label">WebSocket Server:</string>
    <string name="TV_URL_label">URL:</string>
    <string name="TV_error_label">Error:</string>
    <string name="TV_status_label">Status:</string>

    // WebSocket data fields.
    <string name="BT_Websocket_Connect">Connect</string>
    <string name="BT_Websocket_Disconnect">Disconnect</string>
    <string name="BT_websocket_send">Send data</string>
    <string name="TV_websocket_status">Not Connected</string>
    <string name="TV_websocket_error">None</string>
    <string name="TB_WebSocket_URL">ws://matthijs-MS-7A38:9090</string>

    //Camera fields:
    <string name="TV_camera_label">Camera:</string>
    <string name="TV_camera_error">None</string>
    <string name="TV_camera_status">inactive</string>
    <string name="camera_button">Take Photo</string>

    // Drone general labels and info:
    <string name="TV_drone_name">....</string>
    <string name="TV_drone_status">Not Connected</string>
    <string name="reboot_label">Reboot</string>
    <string name="aircraft_label">Aircraft:</string>

    // Drone sensors:
    <string name="TV_aircraft_latitude">NaN</string>
    <string name="TV_aircraft_longitude">NaN</string>
    <string name="TV_aircraft_altitude">NaN</string>
    <string name="TV_aircraft_velocityX">NaN</string>
    <string name="TV_aircraft_velocityY">NaN</string>
    <string name="TV_aircraft_velocityZ">NaN</string>
    <string name="TV_aircraft_roll">NaN</string>
    <string name="TV_aircraft_pitch">NaN</string>
    <string name="TV_aircraft_yaw">NaN</string>
    <string name="IV_drone_camera">Live drone video</string>
    <string name="TV_Debug">Textbox for debugging.</string>
    <string name="satellite_count_label">Satellite Count:</string>
    <string name="sat_count">0</string>
    <string name="signal_level_label">Signal Level:</string>
    <string name="TV_signal_level">NONE</string>

    // RTMP
    <string name="TV_RTMP_label">RTMP Server:</string>
    <string name="TB_RTMP_URL">rtmp://matthijs-MS-7A38/LiveApp/250110064316771014427498</string>
    <string name="RTMP_hint">Put URI for an RTMP server here.</string>
    <string name="BT_app_reboot">Reboot App</string>
    <string name="some_description">Some description</string>
    <string name="TV_gyroscope_label">Gyroscope:</string>
    <string name="TV_gps_sensor_label">GPS sensor:</string>
    <string name="BT_send_data_label">send</string>
    <string name="BT_send_once_label">send once</string>
</resources>