<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sensors" />
        <item
            android:id="@+id/nav_aircraft"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_aircraft" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
    </group>
</menu>