<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.biosentry.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sensors"
        android:name="com.example.biosentry.ui.sensors.SensorsFragment"
        android:label="@string/menu_sensors"
        tools:layout="@layout/fragment_sensors" />

    <fragment
        android:id="@+id/nav_aircraft"
        android:name="com.example.biosentry.ui.aircraft.AircraftFragment"
        android:label="@string/menu_aircraft"
        tools:layout="@layout/fragment_aircraft" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.example.biosentry.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/camera_fragment" />
</navigation>